--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "eslint": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.4.2",
+    "typescript": "*",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -30,6 +31,7 @@
       "react-app",
       "react-app/jest"
     ]
+  
   },
   "browserslist": {
     "production": [
@@ -47,7 +49,13 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
     "babel-jest": "^29.6.2",
+    "eslint-config-standard-with-typescript": "^37.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.33.1",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
     "react-test-renderer": "^18.2.0",
